--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>lit-reactive</title>
+    <title>lit-reactive-in-replit</title>
     <link rel="icon" href="favicon.svg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <script src="main.js" type="module" defer></script>
   </head>
-  <body>
+  <body class="has-background-white-ter" style="height: 100vh">
     <div id="app"></div>
   </body>
 </html>
