--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <script src="main.js" type="module" defer></script>
   </head>
-  <body class="has-background-white-ter" style="height: 100vh">
-    <div id="app"></div>
+  <body class="has-background-white-ter p-5">
+    <div id="app" class="container"></div>
   </body>
 </html>
