--- a/reactive-effects/index.html
+++ b/reactive-effects/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Options API</title>
+  <title>Reactive Effects</title>
+  <link rel="icon" href="favicon.svg">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
   <script src="main.js" type="module" defer></script>
 </head>
 
-<body>
-  <div id="app"></div>
+<body class="has-background-white-ter p-5">
+  <div id="app" class="container"></div>
 </body>
 
 </html>
