--- a/define-props/index.html
+++ b/define-props/index.html
@@ -4,14 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Composition API</title>
-  <link rel="icon" href="favicon.svg">
+  <title>Define Props</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
   <script src="main.js" type="module" defer></script>
 </head>
 
-<body class="has-background-white-ter p-5">
-  <div id="app" class="container"></div>
+<body>
+  <div id="app"></div>
 </body>
 
 </html>
